--- a/style.css
+++ b/style.css
@@ -148,21 +148,91 @@ body {
     margin-right: 20px;
     background-color: #4f9da62c;
     border-radius: 10px;
-    box-shadow: 0 0 20px gray;
 }
 
 .shelter-plan {
     margin-right: 20px;
     background-color: #ff59592d;
     border-radius: 10px;
-    box-shadow: 0 0 20px gray;
 }
 
 .education-plan {
     margin-right: 100px;
     background-color: #fff4d6b3;
     border-radius: 10px;
+}
+
+/*<---------------------<(Help- Urgent Flood Relief in Sylhet Bangladesh)>----------------------------->*/
+.donate {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.donate h1 {
+    font-size: 30px;
+    text-align: center;
+}
+
+
+.plan {
+    display: flex;
+    margin-top: 40px;
+}
+
+.plan p {
+    text-align: left;
+}
+
+.food,
+.shelter,
+.education {
+    width: 26%;
+    height: 250px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+}
+
+.food {
+    margin-left: 100px;
+    margin-right: 20px;
+    background-color: #4f9da62c;
+    border-radius: 10px;
     box-shadow: 0 0 20px gray;
+}
+
+.food img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.shelter {
+    margin-right: 20px;
+    background-color: #ff59592d;
+    border-radius: 10px;
+    box-shadow: 0 0 20px gray;
+}
+
+.shelter img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.education {
+    margin-right: 100px;
+    background-color: #fff4d6b3;
+    border-radius: 10px;
+    box-shadow: 0 0 20px gray;
+}
+
+.education img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.donate .donate-btn {
+    margin-top: 40px;
 }
 
 /*<-----------------------------------------<(Subscribe Section)>--------------------------------------->*/
@@ -189,11 +259,9 @@ body {
     margin-left: 200px;
 }
 
-.enter-email {
-    margin-top: 80px;
-}
 
 .enter-email {
+    margin-top: 80px;
     padding: 10px;
     width: 220px;
     background-color: #D9D9D9;
